Mass commit
Probably should've spread this across a few commits.

- Improved testing.
- Replaced logic in the Analyzer so that it calculates velocity instead
of accessing it. Realistically, you would need to calculate that data.
- Converted project to maven for access to build tools.
- Used proper foreach syntax in Simulator
- Changed visibility for the heading and velocity attributes in Tracker
to prevent unrealistic access while still permitting a copy constructor.
- Confirmed tests still function with new project configuration.